--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,22 +4,50 @@ services:
     ports:
       - "3000:3000"
     depends_on:
-      - backend
+      - nginx
     networks:
       - app-network
 
-  backend:
+  backend1:
     build: ./backend
+    environment:
+      - PORT=4001
     ports:
-      - "4000:4000"
+      - "4001:4001"
     depends_on:
       - database
       - cache
     networks:
       - app-network
 
+  backend2:
+    build: ./backend
+    environment:
+      - PORT=4002
+    ports:
+      - "4002:4002"
+    depends_on:
+      - database
+      - cache
+    networks:
+      - app-network
+  
+  nginx:
+    image: nginx:latest
+    ports: 
+      - "80:80"
+      - "443:443"
+    volumes:
+      - ./nginx.conf:/etc/nginx/nginx.conf
+    depends_on:
+      - backend1
+      - backend2
+    networks:
+      - app-network
+
+
   database:
-    image: mongo:latest
+    image: mongo:4.4
     volumes:
       - mongo-data:/data/db
     networks:
